66) kernel: nfs: fix nfs_size_to_loff_t.<br>
67) kernel: rcu: make rcu_is_cpu_rrupt_from_idle helper functions static.<br>
68) kernel: wait: allow sys_waitid() to accept __WNOTHREAD/__WCLONE/__WALL.<br>
69) kernel: sched: always inline context_switch().<br>
70) kernel: sections: fix section conflicts in mm/percpu.c.<br>
71) kernel: mm/mlock: prepare params outside critical region.<br>
72) kernel: mm: reorder can_do_mlock to fix audit denial.<br>
73) kernel: mm/msync.c: sync only the requested range in msync().<br>
74) kernel: mm/msync: fix incorrect fstart calculation.<br>
75) kernel: mm/mempool: add @gfp_mask to mempool_create_node().<br>
76) kernel: mm/mempool: convert kmalloc_node(...GFP_ZERO...) to kzalloc_node(...).<br>
77) kernel: mips: make flush_thread and exit_thread always inline.<br>
78) kernel: mips: lib: mark intrinsics notrace.<br>
79) kernel: mips: fix accessing to per-cpu data when flushing the cache.<br>
80) kernel: mips: fix forgotten preempt_enable() when CPU has inclusive pcaches.<br>
81) kernel: usb: xhci: fix wild pointers in xhci_mem_cleanup.<br>
82) kernel: usb: serial: option: add more ZTE device ids.<br>
83) kernel: usb: serial: option: add support for Cinterion PH8 and AHxx.<br>
84) kernel: usb: net: cdc_ncm: update datagram size after changing mtu.<br>
85) kernel: usb: core: fix crash on unlink urb.<br>
86) kernel: usb: retry reset if a device times out.<br>
87) kernel: net: do not block BH while processing socket backlog.<br>
88) kernel: net: tcp: make tcp_sendmsg() aware of socket backlog.<br>
89) kernel: net: tcp: guarantee forward progress in tcp_sendmsg().<br>
90) kernel: net: ipv4: don't do expensive useless work during inetdev destroy.<br>
91) kernel: net: bridge: fix incorrect re-injection of STP packets.<br>
92) kernel: net: ethtool: use kcalloc instead of kmalloc for ethtool_get_strings.<br>
93) kernel: net: netfilter: x_tables: don't move to non-existent next rule (CVE-2016-4997).<br>
<br>
<br>
<br>